remove hot_reload change to use chrome hot reload exten
https://chrome.google.com/webstore/detail/extensions-reloader/fimgfedafeadlieiabdeeaodndnlbhid

--- a/src/css/linkhay.css
+++ b/src/css/linkhay.css
@@ -358,8 +358,11 @@
     display: block;
 }
 
-.as-highlight {
+.as-highlight, .red {
     color: red;
+}
+.grey {
+    color: #3e3d3d;
 }
 
 .loader {
